@@ -639,8 +639,10 @@ class tx_seminars_configcheck extends tx_seminars_oe_configcheck {
 				'date',
 				'time',
 				'place',
+				'seats',
 				'price_regular',
 				'price_special',
+				'total_price',
 				'organizers',
 				'vacancies',
 				'registration',
