@@ -26,9 +26,11 @@
 <!-- ###LISTHEADER_WRAPPER_SPEAKERS### --><!-- ###LISTHEADER_WRAPPER_DATE### -->      <th###CLASS_HEADERDATE###>###HEADER_DATE###</th>
 <!-- ###LISTHEADER_WRAPPER_DATE### --><!-- ###LISTHEADER_WRAPPER_TIME### -->      <th###CLASS_HEADERTIME###>###HEADER_TIME###</th>
 <!-- ###LISTHEADER_WRAPPER_TIME### --><!-- ###LISTHEADER_WRAPPER_PLACE### -->      <th###CLASS_HEADERPLACE###>###HEADER_PLACE###</th>
-<!-- ###LISTHEADER_WRAPPER_PLACE### --><!-- ###LISTHEADER_WRAPPER_PRICE_REGULAR### -->      <th###CLASS_HEADERPRICE_REGULAR###>###HEADER_PRICE_REGULAR###</th>
+<!-- ###LISTHEADER_WRAPPER_PLACE### --><!-- ###LISTHEADER_WRAPPER_SEATS### -->      <th###CLASS_HEADERSEATS###>###HEADER_SEATS###</th>
+<!-- ###LISTHEADER_WRAPPER_SEATS### --><!-- ###LISTHEADER_WRAPPER_PRICE_REGULAR### -->      <th###CLASS_HEADERPRICE_REGULAR###>###HEADER_PRICE_REGULAR###</th>
 <!-- ###LISTHEADER_WRAPPER_PRICE_REGULAR### --><!-- ###LISTHEADER_WRAPPER_PRICE_SPECIAL### -->      <th###CLASS_HEADERPRICE_SPECIAL###>###HEADER_PRICE_SPECIAL###</th>
-<!-- ###LISTHEADER_WRAPPER_PRICE_SPECIAL### --><!-- ###LISTHEADER_WRAPPER_ORGANIZERS### -->      <th###CLASS_HEADERORGANIZERS###>###HEADER_ORGANIZERS###</th>
+<!-- ###LISTHEADER_WRAPPER_PRICE_SPECIAL### --><!-- ###LISTHEADER_WRAPPER_TOTAL_PRICE### -->      <th###CLASS_HEADERTOTAL_PRICE###>###HEADER_TOTAL_PRICE###</th>
+<!-- ###LISTHEADER_WRAPPER_TOTAL_PRICE### --><!-- ###LISTHEADER_WRAPPER_ORGANIZERS### -->      <th###CLASS_HEADERORGANIZERS###>###HEADER_ORGANIZERS###</th>
 <!-- ###LISTHEADER_WRAPPER_ORGANIZERS### --><!-- ###LISTHEADER_WRAPPER_VACANCIES### -->      <th###CLASS_HEADERVACANCIES###>###HEADER_VACANCIES###</th>
 <!-- ###LISTHEADER_WRAPPER_VACANCIES### --><!-- ###LISTHEADER_WRAPPER_REGISTRATION### -->      <th###CLASS_HEADERREGISTRATION###>###HEADER_REGISTRATION###</th>
 <!-- ###LISTHEADER_WRAPPER_REGISTRATION### --><!-- ###LISTHEADER_WRAPPER_LIST_REGISTRATIONS### -->      <th###CLASS_HEADERLIST_REGISTRATIONS###>###HEADER_LIST_REGISTRATIONS###</th>
@@ -53,9 +55,11 @@
 <!-- ###LISTITEM_WRAPPER_SPEAKERS### --><!-- ###LISTITEM_WRAPPER_DATE### -->      <td###CLASS_LISTDATE###>###DATE###</td>
 <!-- ###LISTITEM_WRAPPER_DATE### --><!-- ###LISTITEM_WRAPPER_TIME### -->      <td###CLASS_LISTTIME###>###TIME###</td>
 <!-- ###LISTITEM_WRAPPER_TIME### --><!-- ###LISTITEM_WRAPPER_PLACE### -->      <td###CLASS_LISTPLACE###>###PLACE###</td>
-<!-- ###LISTITEM_WRAPPER_PLACE### --><!-- ###LISTITEM_WRAPPER_PRICE_REGULAR### -->      <td###CLASS_LISTPRICE_REGULAR###>###PRICE_REGULAR###</td>
+<!-- ###LISTITEM_WRAPPER_PLACE### --><!-- ###LISTITEM_WRAPPER_SEATS### -->      <td###CLASS_LISTSEATS###>###SEATS###</td>
+<!-- ###LISTITEM_WRAPPER_SEATS### --><!-- ###LISTITEM_WRAPPER_PRICE_REGULAR### -->      <td###CLASS_LISTPRICE_REGULAR###>###PRICE_REGULAR###</td>
 <!-- ###LISTITEM_WRAPPER_PRICE_REGULAR### --><!-- ###LISTITEM_WRAPPER_PRICE_SPECIAL### -->      <td###CLASS_LISTPRICE_SPECIAL###>###PRICE_SPECIAL###</td>
-<!-- ###LISTITEM_WRAPPER_PRICE_SPECIAL### --><!-- ###LISTITEM_WRAPPER_ORGANIZERS### -->      <td###CLASS_LISTORGANIZERS###>###ORGANIZERS###</td>
+<!-- ###LISTITEM_WRAPPER_PRICE_SPECIAL### --><!-- ###LISTITEM_WRAPPER_TOTAL_PRICE### -->      <td###CLASS_LISTTOTAL_PRICE###>###TOTAL_PRICE###</td>
+<!-- ###LISTITEM_WRAPPER_TOTAL_PRICE### --><!-- ###LISTITEM_WRAPPER_ORGANIZERS### -->      <td###CLASS_LISTORGANIZERS###>###ORGANIZERS###</td>
 <!-- ###LISTITEM_WRAPPER_ORGANIZERS### --><!-- ###LISTITEM_WRAPPER_VACANCIES### -->      <td###CLASS_LISTVACANCIES###>###VACANCIES###&nbsp;&nbsp;<span###CLASS_SQUARE###>&nbsp;&nbsp;&nbsp;&nbsp;</span></td>
 <!-- ###LISTITEM_WRAPPER_VACANCIES### --><!-- ###LISTITEM_WRAPPER_REGISTRATION### -->      <td###CLASS_LISTREGISTRATION###>###REGISTRATION###</td>
 <!-- ###LISTITEM_WRAPPER_REGISTRATION### --><!-- ###LISTITEM_WRAPPER_LIST_REGISTRATIONS### -->      <td###CLASS_LISTLIST_REGISTRATIONS###>###LIST_REGISTRATIONS###</td>
