@@ -1,4 +1,5 @@
 0.5.0
+- Change: Added "number of seats" and "total price" on the "my-events" list (#491)
 - Fix: Added some missing entries in the static template (#493)
 - Feature: Extend the template helper class so that it also works in the BE (#523)
 - Feature: Added flexform field to select a single event record (#514)
